--- a/Main Page Draft 7.html
+++ b/Main Page Draft 7.html
@@ -66,33 +66,40 @@ body {
 				<li><a href="#about">DevOps</a></li>
 				<li><a href="#about">Technical Tester</a></li>
 				<li><a href="#about">DBA Oracle</a></li>
-			</ul>
 
+			</ul>
 <strong> <h1 align="center"> <u> Recruitment Tracker </u> </strong> </h1 align="centre">
 
-
-
 <br />
 
 <br />
+
 <input type="text" id="Search" name="search" placeholder="Search Google">
 <button class="cui-button" id="SearchOnclick" onclick="searchgoogle()"> Search </button>
 <button class="cui-button" id="GoToGoogle" onclick="go2google()"> Go To Google </button>
 
 <br />
 <br />
+
 <table id="Table" class="cui-data-table" border "black">
+
 	<thead>
+
 <tr class="cui-data-table__head-row">
  <th class="cui-data-table__head-cell"> No. </th> <th class="cui-data-table__head-cell"> Role </th> <th class="cui-data-table__head-cell">  Applications </th> <th class="cui-data-table__head-cell"> Department/Project </th> <th class="cui-data-table__head-cell"> Comment       </th> <th class="cui-data-table__head-cell"> Date Requested </th> <th class="cui-data-table__head-cell"> Application Stage </th> <th class="cui-data-table__head-cell"> First Interview </th>     <th class="cui-data-table__head-cell"> Second Interview </th> <th class="cui-data-table__head-cell"> Reject </th> <th class="cui-data-table__head-cell"> Offer </th>
 </tr>
 </thead>
-<tbody></tbody>
+
+<tbody>
+</tbody>
+
 </table>
 
 
-  </div>
 </div>
+</div>
+
+
 <button class="cui-button" onclick="Test()"> Clear </button>
  <a href="file:///C:/Users/rmcsorley/Documents/Recruitment%20Log/Form_main%20Draft%203.html" class="button"> <button class="cui-button" > Update above table </button></a>
 
